k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: kristijanhk/kiii-backend:latest
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 5050
      targetPort: 5050
  selector:
    app: backend
